[package]
name = "worm"
version = "0.1.0"
edition = "2021"

[features]
derive = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worm_core = { git = "https://github.com/frankiebaffa/worm_core", branch = "master" }
worm_derive = { git = "https://github.com/frankiebaffa/worm_derive", branch = "master" }
